readss/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: readss
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: readss
          image: gcr.io/com-seankhliao/readss
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: subs
              mountPath: /etc/readss/
      volumes:
        - name: subs
          configMap:
            name: readss-subs
