readss/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readss
spec:
  type: ClusterIP
  selector:
    app: readss
  ports:
    - port: 80
      targetPort: 8080
